--- a/index.html
+++ b/index.html
@@ -1,7 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Computer Science Student Portfolio</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #f0f0f0;
+        }
+
+        section {
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+    </style>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <header>
+        <h1>John Doe</h1>
+        <p>Computer Science Student</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>
+            Hello! I am a passionate computer science student with a keen interest in software development,
+            algorithms, and problem-solving. Currently pursuing a degree in Computer Science at [Your University].
+        </p>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+        <p>
+            <strong>[Your University]</strong><br>
+            Bachelor of Science in Computer Science<br>
+            [Expected Graduation Year]
+        </p>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: Java, Python, C++</li>
+            <li>Web Development: HTML, CSS, JavaScript</li>
+            <li>Data Structures and Algorithms</li>
+            <!-- Add more skills as needed -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <p>
+            <strong>Project Title 1:</strong> Brief description of the project.
+        </p>
+        <p>
+            <strong>Project Title 2:</strong> Brief description of the project.
+        </p>
+        <!-- Add more projects as needed -->
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Email: john.doe@example.com</p>
+        <p>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">linkedin.com/in/johndoe</a></p>
+        <p>GitHub: <a href="[Your GitHub Profile URL]" target="_blank">github.com/johndoe</a></p>
+    </section>
+
 </body>
+
 </html>
