see what happens

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Science Student Portfolio</title>
     <style>
+        /* Your existing styles remain unchanged */
         body {
             font-family: 'Arial', sans-serif;
             margin: 20px;
@@ -39,43 +40,18 @@
         <p>Computer Science Student</p>
     </header>
 
+    <!-- Existing sections remain unchanged -->
+
     <section>
-        <h2>About Me</h2>
+        <h2>Node.js</h2>
         <p>
-            Hello! I am a passionate computer science student with a keen interest in software development,
-            algorithms, and problem-solving. Currently pursuing a degree in Computer Science at [Your University].
+            As part of my journey in computer science, I have gained experience in server-side development using Node.js.
+            I have worked on projects involving the creation of RESTful APIs, handling asynchronous operations,
+            and building scalable applications with the help of Node.js and related technologies.
         </p>
     </section>
 
-    <section>
-        <h2>Education</h2>
-        <p>
-            <strong>[Your University]</strong><br>
-            Bachelor of Science in Computer Science<br>
-            [Expected Graduation Year]
-        </p>
-    </section>
-
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>Programming Languages: Java, Python, C++</li>
-            <li>Web Development: HTML, CSS, JavaScript</li>
-            <li>Data Structures and Algorithms</li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
-
-    <section>
-        <h2>Projects</h2>
-        <p>
-            <strong>Project Title 1:</strong> Brief description of the project.
-        </p>
-        <p>
-            <strong>Project Title 2:</strong> Brief description of the project.
-        </p>
-        <!-- Add more projects as needed -->
-    </section>
+    <!-- Existing sections remain unchanged -->
 
     <section>
         <h2>Contact</h2>
