--- a/index.html
+++ b/index.html
@@ -1,65 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Science Student Portfolio</title>
-    <style>
-        /* Your existing styles remain unchanged */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
-
-        header {
-            text-align: center;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        p {
-            line-height: 1.6;
-            color: #666;
-        }
-    </style>
-</head>
-
-<body>
-
-    <header>
-        <h1>John Doe</h1>
-        <p>Computer Science Student</p>
-    </header>
-
-    <!-- Existing sections remain unchanged -->
-
-    <section>
-        <h2>Node.js</h2>
-        <p>
-            As part of my journey in computer science, I have gained experience in server-side development using Node.js.
-            I have worked on projects involving the creation of RESTful APIs, handling asynchronous operations,
-            and building scalable applications with the help of Node.js and related technologies.
-        </p>
-    </section>
-
-    <!-- Existing sections remain unchanged -->
-
-    <section>
-        <h2>Contact</h2>
-        <p>Email: john.doe@example.com</p>
-        <p>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">linkedin.com/in/johndoe</a></p>
-        <p>GitHub: <a href="[Your GitHub Profile URL]" target="_blank">github.com/johndoe</a></p>
-    </section>
-
-</body>
-
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width", initial-scale=1.0>
+        <link href = "/dist/output.css" rel ="stylesheet">
+    </head>
+    <body>
+        <h1 class="text-3xl font-bold underline">
+            Hello World!
+        </h1>
+    </body>
 </html>
