--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class ="text-gray-900 bg-gray-100 font-ggsans">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale=1.0>
